apps/DemoQueenMongo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoqueenmongo
  template:
    metadata:
      labels:
        app: demoqueenmongo
    spec:
      containers:
        - name: demoqueenmongo
          image:  hbouttes/demoqueenmongo:0.1.3-SNAPSHOT
          imagePullPolicy: Always
          env :
            - name: SPRING_DATA_MONGODB_URI
              value: 'mongodb://demo:demo@my-mongodb-0.my-mongodb-headless,my-mongodb-1.my-mongodb-headless,my-mongodb-2.my-mongodb-headless:27017/test?authSource=test'
      tolerations:   
          - key: "metallica"
            operator: "Equal"
            value: "perf"
            effect: "NoSchedule"
