apps/DemoQueenMongo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demoqueenmongo
  labels:
    app: demoqueenmongo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: demoqueenmongo
