apps/DemoQueenMongo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - demoqueenmongo.dev.insee.io
  rules:
    - host: demoqueenmongo.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service :
                name: demo
                port: 
                  number: 8080
